# itmo-ml

./: .gitignore  CMakeLists.txt  collect.py
lab01_knn/: knn.py  lab01.ipynb
lab01_knn/common/: data_tools.py  metrics.py
lab01_knn/utils/: kernels.py
lab02_linear/: annealing.py  gradient.cpp  gradient.py  gradient_old.cpp  lab02.ipynb  out
lab02_linear/common/: graders.py
lab02_linear/methods/: annealing.py  gradient.py  least_squares.py
lab02_linear/utils/: data.py  metrics.py
lab03_svm/: lab03.ipynb  svm.py
lab03_svm/methods/: gradient.py
lab03_svm/utils/: kernels.py
lab04_bayes/: bayes.cpp  bayes.py  lab04.ipynb
lab04_bayes/utils/: data.py
lab05_dt/: forest.py  lab05.ipynb
lab05_dt/utils/: data.py
lab06_adaboost/: adaboost.py  lab06.ipynb
lab06_adaboost/utils/: data.py
lab07_cnn/: cnn.ipynb  lab07.ipynb
lab09_clust/: lab09.ipynb
utils/: metrics.py  utils.py
